--- a/src/StringMaster/Strings/ResourceStrings.resx
+++ b/src/StringMaster/Strings/ResourceStrings.resx
@@ -126,6 +126,9 @@
   <data name="ColumnHeader3D" xml:space="preserve">
     <value>3D</value>
   </data>
+  <data name="ColumnHeaderDescription" xml:space="preserve">
+    <value>Description</value>
+  </data>
   <data name="ColumnHeaderFeatureLine" xml:space="preserve">
     <value>FeatureLine</value>
   </data>
